tests/codegen/fail/interface/struct/derive_non_subtype_return.stderr
error[E0080]: evaluation panicked: failed to implement interface `Character` on `ObjA`: field `id`: implementor is expected to return a subtype of interface's return object: `[String!]!` is not a subtype of `String!`
  --> fail/interface/struct/derive_non_subtype_return.rs:12:5
   |
12 |     id: String,
   |     ^^ evaluation of `<CharacterValueEnum<ObjA> as juniper::macros::reflect::Field<__S, id>>::call::_` failed here
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::juniper::assert_field` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation panicked: failed to implement interface `Character` on `ObjA`: field `id`: implementor is expected to return a subtype of interface's return object: `[String!]!` is not a subtype of `String!`
  --> fail/interface/struct/derive_non_subtype_return.rs:12:5
   |
12 |     id: String,
   |     ^^ evaluation of `<CharacterValueEnum<ObjA> as juniper::macros::reflect::AsyncField<__S, id>>::call::_` failed here
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::juniper::assert_field` (in Nightly builds, run with -Z macro-backtrace for more info)
